# Taskmaster

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt  run.py  vercel.json  wsgi.py
api/: wsgi.py
api/src/: __init__.py  config.py
api/src/forms/: login_form.py  task_form.py
api/src/infra/: compose.yaml  database.py
api/src/models/: task.py  user.py
api/src/repositories/: task_repository.py  user_repository.py
api/src/routes/: auth_routes.py  task_routes.py  test_routes.py  view_routes.py
api/src/templates/: board.html  register.html
api/src/tests/: test_login_user_use_case.py
api/src/utils/: user_registration_notifier.py
src/: __init__.py  config.py
src/database/: db.py
src/forms/: login.py  login_form.py  register.py  register_form.py  task_form.py
src/models/: task.py  user.py
src/repositories/: task_repository.py  user_repository.py
src/routes/: auth_routes.py  form_routes.py  main_routes.py  router.py  routes.py  task_routes.py  user_routes.py  view_routes.py
src/server/: server.py
src/templates/: base.html  board.html  board_base.html  index.html  login.html  register.html  sign_up.html
src/tests/: test_factory.py  test_login_user_use_case.py  test_password_hasher.py  test_register.py  test_register_user_use_case.py  test_routes.py
src/utils/: check_field_whitespaces.py  check_form_fields.py  password_hasher.py  user_creator.py  user_login_notifier.py  user_registration_notifier.py
tests/: test_register.py  test_register_user_use_case.py  test_routes.py
(+60 files in other folders)
