[tool.poetry]
name = "taskmaster"
version = "1.0.0"
description = ""
authors = ["Deivid Souza Santana <deividsantana2013@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
astroid = "3.0.3"
bcrypt = "4.1.2"
black = "24.3.0"
blinker = "1.7.0"
cffi = "1.16.0"
cfgv = "3.4.0"
click = "8.1.7"
cryptography = "42.0.2"
dill = "0.3.8"
distlib = "0.3.8"
filelock = "3.13.3"
Flask = "3.0.2"
flask-htmx = "0.3.2"
Flask-Login = "0.6.3"
Flask-SQLAlchemy = "3.1.1"
Flask-WTF = "1.2.1"
greenlet = "3.0.3"
identify = "2.5.35"
isort = "5.13.2"
itsdangerous = "2.1.2"
Jinja2 = "3.1.3"
MarkupSafe = "2.1.5"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
nodeenv = "1.8.0"
packaging = "24.0"
pathspec = "0.12.1"
platformdirs = "4.2.0"
pre-commit = "3.7.0"
pycparser = "2.21"
PyMySQL = "1.1.0"
python-dotenv = "1.0.1"
PyYAML = "6.0.1"
SQLAlchemy = "2.0.26"
tomli = "2.0.1"
tomlkit = "0.12.3"
typing_extensions = "4.9.0"
virtualenv = "20.25.1"
Werkzeug = "3.0.1"
WTForms = "3.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
